# bazel_code_gen

./: BUILD.bazel  README.md  WORKSPACE  generate_java_code.py  requirements.txt  requirements_lock.txt
src/main/java/com/example/: HelloWorld.java
