# BUILD.bazel
load("@rules_python//python:defs.bzl", "py_binary")

py_binary(
    name = "generate_java_code",
    srcs = ["generate_java_code.py"],
    deps = ["@pypi//pytzdata:pkg"],
)

genrule(
    name = "generate_java_code_rule",
    srcs = [],
    tools = [":generate_java_code"],
    outs = ["GeneratedClass.java"],
    cmd = "$(location :generate_java_code) $(OUTS)",
)

java_library(
    name = "my_generated_java_lib",
    srcs = ["GeneratedClass.java"],
    deps = [
        # other dependencies
    ],
)

java_binary(
    name = "my_java_bin",
    srcs = ["src/main/java/com/example/HelloWorld.java"],
    main_class = "com.example.HelloWorld",
    deps = [
        ":my_generated_java_lib"
    ]
)
